feat(internal): implement transaction reports
